Chatbox light/dark modes + fixes

--- a/front/app/app.css
+++ b/front/app/app.css
@@ -3,7 +3,7 @@
 @plugin "daisyui";
 
 @plugin "daisyui/theme" {
-  name: "silk";
+  name: "brand";
   default: true;
   prefersdark: false;
   color-scheme: "light";
@@ -35,6 +35,24 @@
   --border: 2px;
   --depth: 1;
   --noise: 1;
+}
+
+@plugin "daisyui/theme" {
+  name: "light";
+  default: false;
+  --color-primary: oklch(55% 0.288 302.321);
+  --color-primary-content: oklch(97% 0.014 308.299);
+  --color-secondary: oklch(64% 0.222 41.116);
+  --color-secondary-content: oklch(98% 0.016 73.684);
+}
+
+@plugin "daisyui/theme" {
+  name: "dark";
+  default: false;
+  --color-primary: oklch(55% 0.288 302.321);
+  --color-primary-content: oklch(97% 0.014 308.299);
+  --color-secondary: oklch(64% 0.222 41.116);
+  --color-secondary-content: oklch(98% 0.016 73.684);
 }
 
 .gradient-text {
